* updating GTK3 theme

--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
@@ -249,7 +249,7 @@ GtkCalendar {
  * tabs          *
  *****************/
 .notebook {
-    padding: 2;
+    padding: 0 0 0 0;
 
     border-color: @notebook_border;
     border-style: solid;
@@ -258,18 +258,18 @@ GtkCalendar {
 
     background-color: @theme_base_color;
 
-    -GtkNotebook-tab-overlap: 8;
-    -GtkNotebook-tab-curvature: 6;
+    -GtkNotebook-tab-overlap: 0;
+    -GtkNotebook-tab-curvature: 2;
 }
 
 .notebook tab {
-    padding: 3 8 0;
+    padding: 0 0 0 0;
     background-image: -gtk-gradient (linear,
                                      left top, left bottom,
                                      from (@notebook_tab_gradient_a),
                                      to (@notebook_tab_gradient_b));
 
-    -adwaita-focus-border-radius: 2;
+    -adwaita-focus-border-radius: 0;
 }
 
 .notebook tab:active {
@@ -304,63 +304,6 @@ GtkComboBox {
 
 GtkComboBox.button {
     color: @internal_element_color;
-}
-
-/***********
- * Buttons *
- ***********/
-.button {
-    padding: 3;
-
-    -adwaita-focus-fill-color: alpha (@theme_base_color, 0.35);
-    -adwaita-focus-border-gradient: -gtk-gradient (linear,
-                                                   left top, left bottom,
-                                                   from (alpha (@keyboard_focus_border_a, 0.62)),
-                                                   to (alpha (@keyboard_focus_border_b, 0.62)));
-    -adwaita-focus-border-radius: 1;
-    -adwaita-focus-border-dashes: 0;
-    -GtkWidget-focus-line-width: 2;
-
-    border-radius: 2;
-    border-width: 1;
-    border-color: @button_border;
-    border-style: solid;
-
-    background-image: -gtk-gradient (linear,
-				     left top, left bottom,
-                                     from (@button_gradient_color_a),
-                                     to (@button_gradient_color_b));
-}
-
-.button:hover,
-.toolbar.button:hover {
-    border-color: @button_border;
-    background-image: -gtk-gradient (linear,
-				     left top, left bottom,
-				     from (@button_hover_gradient_color_a),
-				     to (@button_hover_gradient_color_b));
-}
-
-.button:active,
-.toolbar .button:active,
-.button:hover:active,
-.toolbar.button:hover:active {
-    background-image: -gtk-gradient (linear,
-    				     left top, left bottom,
-                                     from (@button_active_gradient_color_a),
-				     to (alpha (@button_active_gradient_color_b, 0.13)));
-    border-color: @highlighted_border;
-}
-
-.button:insensitive {
-    background-image: none;
-    background-color: @insensitive_bg_color;
-    color: @insensitive_fg_color;
-}
-
-.button.default {
-    border-width: 2;
-    border-color: shade (@button_border, 1.10);
 }
 
 /*************************
@@ -506,12 +449,12 @@ GtkScrolledWindow.frame {
     border-style: solid;
     border-color: darker (@theme_bg_color);
     border-width: 1;
-    border-radius: 3;
+    border-radius: 0;
 }
 
 GtkViewport,
 GtkIconView {
-    border-radius: 3;
+    border-radius: 0;
     padding: 0;
 }
 
