--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/button.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/button.css
@@ -3,13 +3,7 @@
  ***********/
 
 .button {
-
-    border-radius: 2;
     border-width: 1;
-    border-style: solid;
-    -adwaita-focus-border-radius: 2;
-    -adwaita-focus-border-dashes: 0;
-    -GtkWidget-focus-line-width: 1;
 
     background-image: -gtk-gradient (linear,
                     left top,
@@ -17,30 +11,32 @@
                     from (@base_color),
                     to (shade (@base_color, 0.88)));
 
-    -adwaita-border-gradient: -gtk-gradient (linear,
+    -unico-border-gradient: -gtk-gradient (linear,
                     left top, left bottom,
                     from (shade (@bg_color, 0.78)),
                     to (shade (@bg_color, 0.60)));
 
-    -adwaita-focus-border-gradient: -gtk-gradient (linear,
+    -unico-outer-stroke-gradient: -gtk-gradient (linear,
+                    left top, left bottom,
+                    from (alpha (#000, 0.00)),
+                    to (alpha (#000, 0.10)));
+
+    -unico-focus-border-gradient: -gtk-gradient (linear,
                     left top, left bottom,
                     from (alpha (@keyboard_focus_border_a, 0.62)),
                     to (alpha (@keyboard_focus_border_b, 0.62)));
+}
 
-
+.toolbar.button {
+    -GtkButton-inner-border:                    4;
 }
 
 .button:hover,
 .toolbar.button:hover {
-    border-color: @button_border;
-    background-image: -gtk-gradient (linear,
-				     left top, left bottom,
-				     from (@button_hover_gradient_color_a),
-				     to (@button_hover_gradient_color_b));
 }
 
 .button:active,
-.toolbar .button:active,
+.toolbar.button:active,
 .button:hover:active,
 .toolbar.button:hover:active {
 
@@ -50,16 +46,39 @@
 				     from (shade (@base_color, 0.54)),
 				     to (shade (@base_color, 0.76)));
 
-    -adwaita-border-gradient: -gtk-gradient (linear,
+    -unico-outer-stroke-gradient: -gtk-gradient (linear,
                      left top, left bottom,
-                     from (shade (@bg_color, 0.48)),
-                     to (shade (@bg_color, 0.60)));
+                     from (alpha (#fff, 0.00)),
+                     to (alpha (#fff, 0.40)));
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (shade (@bg_color, 0.46)),
+                     to (shade (@bg_color, 0.58)));
+
+    -unico-inner-stroke-gradient: -gtk-gradient (linear,
+                    left top, left bottom,
+                    from (alpha (#000, 0.12)),
+                    to (alpha (#000, 0.06)));
 }
 
 .button:insensitive {
-    background-image: none;
-    background-color: @insensitive_bg_color;
-    color: @insensitive_fg_color;
+    background-image: -gtk-gradient (linear,
+				     left top,
+				     left bottom,
+                     from (shade (@bg_color, 1.06)),
+                     to (shade (@bg_color, 0.88)));
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (shade (@bg_color, 0.76)),
+                     to (shade (@bg_color, 0.70)));
+
+    -unico-outer-stroke-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (alpha (#fff, 0.00)),
+                     color-stop (0.75, alpha (#fff, 0.00)),
+                     to (alpha (#fff, 0.40)));
 }
 
 .button.default {
