--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/entry.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/entry.css
@@ -3,40 +3,61 @@
  ****************/
 .entry,
 .toolbar.entry {
-    background-image: -gtk-gradient (linear,
-				     left top,
-				     left bottom,
-				     from (shade (@base_color, 0.94)),
-				     to (@base_color));
-    border-radius: 2;
-    border-width: 1;
-    border-style: solid;
-    -adwaita-border-gradient: -gtk-gradient (linear,
-                                             left top, left bottom,
-                                             from (shade (@bg_color, 0.70)),
-                                             to (shade (@bg_color, 0.74)));
+    border-width:   1;
+    padding:        4;
 
-    padding: 3;
+    background-image: -gtk-gradient (linear,
+			         left top,
+			         left bottom,
+			         from (shade (@base_color, 0.80)),
+                     color-stop (0.20, shade (@base_color, 0.94)),
+			         to (@base_color));
+
+    -unico-outer-stroke-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (alpha (#fff, 0.00)),
+                     color-stop (0.75, alpha (#fff, 0.00)),
+                     to (alpha (#fff, 0.40)));
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (shade (@bg_color, 0.65)),
+                     to (shade (@bg_color, 0.72)));
+
+    -unico-inner-stroke-gradient: -gtk-gradient (linear,
+                    left top, left bottom,
+                    from (alpha (#000, 0.10)),
+                    to (alpha (#000, 0.06)));
 }
 
 .entry:focused {
-    border-color: @focused_entry_border;
-    -adwaita-border-gradient: none;
+    -unico-inner-stroke-gradient: -gtk-gradient (linear,
+                    left top, left bottom,
+                    from (alpha (#2f90ff, 0.25)),
+                    to (alpha (#56c5ff, 0.25)));
 }
 
 .entry:insensitive {
-    background-color: @insensitive_bg_color;
-    border-color: shade (@inactive_frame_color, 0.945);
-    -adwaita-border-gradient: none;
+
+    background-image: -gtk-gradient (linear,
+			         left top,
+			         left bottom,
+			         from (shade (@bg_color, 0.85)),
+                     color-stop (0.20, shade (@bg_color, 0.94)),
+			         to (@bg_color));
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (shade (@bg_color, 0.67)),
+                     to (shade (@bg_color, 0.74)));
+
 }
 
 .entry.progressbar {
-    /* FIXME: need correct colors/gradient */
     background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
 
     border-width: 1;
     border-radius: 1;
-    border-color: @progressbar_border;
 }
 
