--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/scrollbar.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/scrollbar.css
@@ -3,34 +3,31 @@
  **************/
 
 .scrollbar {
-    background-image: none;
-    border-style: solid;
-    -GtkRange-trough-border: 1;
-    -GtkRange-arrow-scaling: 0.444;
-    -GtkRange-slider-width: 6;
-    -GtkRange-stepper-size: 0;
+    -GtkRange-slider-width:     4;
+    -GtkRange-stepper-size:     0;
+    -GtkRange-stepper-spacing:   1;
+    -GtkRange-trough-border:    2;
+
     -GtkScrollbar-min-slider-length: 30;
-    -GtkRange-stepper-spacing: 1;
-    -GtkRange-trough-under-steppers: 1;
 }
 
 .scrollbar.trough {
-    background-color: @theme_base_color;
-    border-width: 0;
-    border-radius: 0;
+    background-color: @base_color;
+    border-width:      0;
+    border-radius:      0;
 }
 
 .scrollbar.slider,
 .scrollbar.slider:prelight,
 .scrollbar.button {
-    background-color: alpha (#000, 0.4);
-    border-color: alpha (#FFF, 0.4);
-    border-radius: 10;
-    border-width: 1;
+    border-width:              0;
+    background-color:         alpha (#000, 0.4);
+    -unico-inner-stroke-color:  none;
+    -unico-outer-stroke-color:  alpha (#FFF, 0.4);
+    border-radius:              10;
 }
 
 .scrollbar.button {
-    color: @internal_element_color;
 }
 
 .scrollbar.slider:insensitive {
