--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-dark.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-dark.css
@@ -1,71 +1,26 @@
-/* dark colormap */
+/* Default color scheme */
+@define-color base_color #FFF;
+@define-color bg_color #363636;
+@define-color tooltip_bg_color #000;
+@define-color selected_bg_color #4a90d9;
+@define-color text_color #fff;
+@define-color fg_color #fff;
+@define-color tooltip_fg_color #FFF;
+@define-color selected_fg_color #FFF;
 
-/* FIXME: I made up most of these colors, need proper design */
-@define-color theme_base_color #000000;
-@define-color theme_text_color #d1cbc9;
-@define-color theme_bg_color #121212;
-@define-color theme_fg_color #d1cbc9;
-@define-color theme_selected_bg_color alpha (@theme_fg_color, 0.70);
-@define-color theme_selected_fg_color #000000;
+/* Colormap actually used by the theme, to be overridden in other css files */
+@define-color theme_base_color @base_color;
+@define-color theme_text_color @text_color;
+@define-color theme_bg_color @bg_color;
+@define-color theme_fg_color @fg_color;
+@define-color theme_tooltip_bg_color @tooltip_bg_color;
+@define-color theme_tooltip_fg_color @tooltip_fg_color;
+@define-color theme_selected_bg_color @selected_bg_color;
+@define-color theme_selected_fg_color @selected_fg_color;
 
-@define-color theme_tooltip_bg_color #cbcbcb;
-@define-color theme_tooltip_fg_color #000000;
-
-@define-color button_gradient_color_a #282528;
-@define-color button_gradient_color_b #0d0b0d;
-@define-color button_border #383438;
-
-@define-color button_active_gradient_color_a shade (@button_active_gradient_color_b, 0.83);
-@define-color button_active_gradient_color_b #5d565d;
-
-@define-color button_hover_gradient_color_a shade (@button_gradient_color_a, 1.07);
-@define-color button_hover_gradient_color_b @theme_base_color;
-
-@define-color insensitive_bg_color #0b0b0d;
-@define-color insensitive_fg_color #585458;
-
-@define-color inactive_frame_color shade (@theme_bg_color, 1.19);
-
-@define-color notebook_border #393939;
-@define-color notebook_active_tab_border alpha (@theme_base_color, 0.50);
-@define-color notebook_selected_tab_color alpha (@theme_fg_color, 0.75);
-
-@define-color notebook_tab_gradient_a @switch_slider_color;
-@define-color notebook_tab_gradient_b @theme_base_color;
-
-@define-color switch_slider_color #111113;
-@define-color switch_slider_border #a5b8cc;
-
-@define-color highlighted_border #757075;
-@define-color internal_element_color #77757a;
-
-@define-color progressbar_background_a alpha (@theme_fg_color, 0.70);
-@define-color progressbar_background_b alpha (@theme_fg_color, 0.45);
-@define-color progressbar_border alpha (@theme_fg_color, 0.60);
-
-@define-color focused_entry_border alpha (@theme_fg_color, 0.95);
-
-@define-color toolbar_gradient_base #1a1a1d;
-@define-color toolbar_gradient_step1 #262628;
-@define-color toolbar_gradient_step2 #43434b;
-@define-color toolbar_gradient_final #858597;
-
-@define-color toolbar_active_button_color #6f6f7e;
-
-@define-color expander_row_selected_color alpha (@theme_base_color, 0.60);
-
-@define-color menu_controls_color #aaa8ac;
-
-@define-color keyboard_focus_border_a alpha (@theme_fg_color, 0.80);
-@define-color keyboard_focus_border_b alpha (@theme_fg_color, 0.60);
-
-@define-color trough_bg_color_a #1b1b1e;
-@define-color trough_bg_color_b #333338;
-
-@define-color frame_color #756a7f;
-
-/* FIXME: needs dark colors from here */
-@define-color link_color #4a90d9;
+@define-color link_color #08C;
+@define-color frame_color #8a9580;
+@define-color inactive_frame_color #c7ccc1;
 @define-color warning_color #f57900;
 @define-color error_color #cc0000;
 @define-color success_color #4e9a06;
@@ -79,18 +34,8 @@
 @define-color error_fg_color rgb (166, 38, 38);
 @define-color error_bg_color rgb (237, 54, 54);
 
-@define-color os_chrome_bg_color black;
-@define-color os_chrome_fg_color #ccc;
-@define-color os_chrome_selected_bg_color #333;
-@define-color os_chrome_selected_fg_color white;
 
-@define-color chrome_bg_color #1e1a17;
-@define-color chrome_fg_color #fff;
+@define-color insensitive_bg_color #f4f4f2;
+@define-color insensitive_fg_color #a7aba7;
 
-@define-color active_switch_bg_color_a #509ae7;
-@define-color active_switch_bg_color_b #84b8ee;
-
-@define-color scale_fill_a #2c85e2;
-@define-color scale_fill_b #b8d6f5;
-
-@import url ("gtk-widgets.css");
+@import url("gtk-widgets.css");
