--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/toolbar.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/toolbar.css
@@ -2,7 +2,7 @@
  * Toolbars *
  ***********/
 
-.toolbar {
+.secondary-toolbar.toolbar {
     background-image: -gtk-gradient (linear,
 				     left top,
 				     left bottom,
@@ -18,7 +18,7 @@
     -GtkWidget-window-dragging: true;
 }
 
-.toolbar:insensitive {
+.secondary-toolbar.toolbar:insensitive {
     color: alpha (@theme_fg_color, 0.6);
 }
 
@@ -26,7 +26,8 @@
  * Primary Toolbars *
  ********************/
 
-.primary-toolbar.toolbar {
+.primary-toolbar.toolbar,
+.toolbar {
     background-image: -gtk-gradient (linear,
 				     left top,
 				     left bottom,
@@ -41,7 +42,8 @@
     -GtkWidget-window-dragging: true;
 }
 
-.primary-toolbar.toolbar:insensitive {
+.primary-toolbar.toolbar:insensitive,
+.toolbar:insensitive {
     background-image: none;
     background-color: shade (@theme_bg_color, 0.97);
 
@@ -50,7 +52,8 @@
     border-color: shade (@theme_bg_color, 0.91);
 }
 
-.primary-toolbar.toolbar.separator {
+.primary-toolbar.toolbar.separator,
+.toolbar.separator {
     border-width: 0;
 }
 
