--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/gtk-widgets.css
@@ -1,56 +1,269 @@
 * {
-    -GtkButton-child-displacement-x:             0;
-    -GtkButton-child-displacement-y:             0;
-    -GtkButton-default-border:                 0;
-    -GtkButton-image-spacing:                    0;
-    -GtkButton-inner-border:                    3;
+        -GtkExpander-expander-size:              16;
 
-    -GtkCheckButton-indicator-size:             15;
-    -GtkCheckMenuItem-indicator-size:           12;
+        -GtkPaned-handle-size:                   8;
 
-    -GtkEntry-inner-border:                     2;
-    -GtkEntry-progress-border:                  0;
+        -GtkScrolledWindow-scrollbar-spacing:        0;
+        -GtkScrolledWindow-scrollbars-within-bevel:  1;
 
-    -GtkExpander-expander-size:                 16;
+        -GtkNotebook-tab-overlap:                   5;
 
-    -GtkPaned-handle-size:                      8;
+        -GtkWidget-link-color:                   @link_color;
+        -GtkWidget-visited-link-color:           @link_color;
+        -GtkIMHtml-hyperlink-color:              @link_color;
+        -GtkHTML-link-color:                     @link_color;
 
-    -GtkScrolledWindow-scrollbar-spacing:        0;
-    -GtkScrolledWindow-scrollbars-within-bevel:  1;
+        -GtkCheckMenuItem-indicator-size:           12;
 
-    -GtkToolbar-internal-padding:               0;
+        -GtkWidget-focus-padding:                   0;
 
-    -GtkToolButton-icon-spacing:                 6;
+        padding:                                1;
 
-    -GtkWidget-focus-padding:                   0;
+        engine: unico;
 
-    -GtkWidget-link-color:                      @link_color;
-    -GtkWidget-visited-link-color:              @link_color;
-    -GtkIMHtml-hyperlink-color:                 @link_color;
-    -GtkHTML-link-color:                        @link_color;
-
-    border-radius:                               2;
-    padding:                                    1;
-
-    engine: unico;
-        -unico-inner-stroke-color:              alpha (#fff, 0.30);
         -unico-text-shadow-color:              alpha (#fff, 0.30);
 
         -unico-bullet-color:                    shade (@bg_color, 0.535);
         -unico-bullet-outline-color:           shade (@bg_color, 1.2);
 
-        -unico-focus-border-color:              alpha (@selected_bg_color, 0.5);
+
+        -unico-outer-stroke-style:               custom;
+
+        -unico-focus-border-color:             alpha (@selected_bg_color, 0.5);
         -unico-focus-border-radius:              2;
         -unico-focus-fill-color:                alpha (@selected_bg_color, 0.1);
         -unico-focus-outer-stroke-color:        alpha (@selected_bg_color, 0.0);
-
-        -unico-outer-stroke-style:              custom;
-        -unico-outer-stroke-gradient:           -gtk-gradient (linear,
-                                                left top, left bottom,
-                                                from (alpha (#000, 0.00)),
-                                                to (alpha (#000, 0.10)));
 }
 
+
+/************
+* Roundness *
+************/
+
+/* Square */
+.pane-separator,
+.view,
+column-header .button,
+GtkScale.slider {
+        border-radius:                              0;
+}
+
+/* Slightly rounded */
+.button,
+.check,
+.entry,
+.notebook,
+.notebook tab .button,
+GtkSwitch,
+GtkSwitch.slider,
+GtkSwitch.trough {
+        border-width:                             1; 
+        border-radius:                              2;
+}
+
+/* Round */
+.radio,
+GtkScale.trough {
+        border-radius:                              10;
+}
+
+/*************
+* Highlights *
+*************/
+
+/* Inner Higlight */
+.button,
+.menu.menuitem,
+.notebook,
+GtkSwitch {
+        -unico-inner-stroke-color:                  alpha (#fff, 0.30);
+}
+
+/* Outer Highlight */
+.button:active,
+.button:insensitive,
+.entry,
+.check,
+.radio,
+GtkSwitch.trough,
+.notebook tab .button {
+        -unico-outer-stroke-gradient: -gtk-gradient (linear,
+                         left top, left bottom,
+                         from (alpha (#fff, 0.00)),
+                         color-stop (0.80, alpha (#fff, 0.00)),
+                         to (alpha (#fff, 0.40)));
+}
+
+/**********
+* Shadows *
+**********/
+
+/* Inner Shadow */
+
+.button:active,
+.entry,
+.check,
+.radio,
+GtkProgressBar.trough,
+GtkScale.trough,
+GtkSwitch.trough,
+.notebook tab .button {
+    -unico-inner-stroke-gradient: -gtk-gradient (linear,
+                    left top, left bottom,
+                    from (alpha (#000, 0.10)),
+                    to (alpha (#000, 0.06)));
+}
+
+/* Outer Shadow */
+
+.button,
+.menu.menuitem,
+.notebook,
+GtkScale.slider {
+        -unico-outer-stroke-gradient:               -gtk-gradient (linear,
+                                                    left top, left bottom,
+                                                    from (alpha (#000, 0.00)),
+                                                    to (alpha (#000, 0.10)));
+}
+
+/**********
+* Troughs *
+**********/
+
+/* Interactive Trough */
+
+.check,
+.entry,
+.radio {
+    background-image: -gtk-gradient (linear,
+			         left top,
+			         left bottom,
+			         from (shade (@base_color, 0.82)),
+                     color-stop (0.20, shade (@base_color, 0.94)),
+			         to (@base_color));
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (shade (@bg_color, 0.65)),
+                     to (shade (@bg_color, 0.72)));
+}
+
+
+/* Shallow Trough */
+
+.check:insensitive,
+.entry:insensitive,
+.radio:insensitive,
+GtkProgressBar.trough,
+GtkScale.trough,
+GtkSwitch.trough:insensitive {
+    background-image: -gtk-gradient (linear,
+			         left top,
+			         left bottom,
+			         from (alpha (#000, 0.10)),
+                     color-stop (0.20, alpha (#000, 0.00)),
+			         to (alpha (#000, 0.00)));
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (shade (@bg_color, 0.67)),
+                     to (shade (@bg_color, 0.74)));
+}
+
+.button {
+
+        -GtkButton-child-displacement-x:             0;
+        -GtkButton-child-displacement-y:             0;
+        -GtkButton-default-border:                 0;
+        -GtkButton-image-spacing:                    0;
+        -GtkButton-inner-border:                    3;
+}
+
+.check {
+        -GtkCheckButton-indicator-size:             15;
+}
+
+.entry {
+
+        -GtkEntry-inner-border:                     2;
+        -GtkEntry-progress-border:                  0;
+
+}
+
+.marlin-pathbar {
+    padding: 4;
+}
+
+
+/*****************
+ * Notebooks and *
+ * Tabs          *
+ *****************/
+
+.notebook {
+    background-color:   shade (@bg_color, 1.06);
+}
+
+.notebook tab {
+    background-color:   shade (@bg_color, 0.85);
+    border-radius: 4;
+}
+
+.notebook tab:active {
+    background-color:   shade (@bg_color, 1.06);
+}
+
+.notebook tab .button,
+.notebook tab .button:hover,
+.notebook tab .button:hover:active {
+
+    -GtkButton-inner-border:                    0;
+
+    background-image:   none;
+    background-color:   alpha (#000, 0.02);
+
+    -unico-border-gradient: -gtk-gradient (linear,
+                     left top, left bottom,
+                     from (alpha (#000, 0.29)),
+                     to (alpha (#000, 0.32)));
+}
+
+.notebook tab .button:hover:active {
+    background-color:   alpha (#000, 0.10);
+}
+
+.pane-separator,
+.pane-separator:prelight,
+.pane-separator:selected {
+    border-width:                             0;
+    
+    background-image: -gtk-gradient (linear,
+				     left top,
+				     right top,
+				     from (shade (@base_color, 0.55)),
+                     color-stop (0.15, @base_color),
+                     color-stop (0.85, shade (@base_color, 0.88)),
+				     to (shade (@base_color, 0.55)));
+}
+
+.toolbar {
+        border-width: 0;
+
+        -GtkToolbar-internal-padding:               0;
+        -GtkToolButton-icon-spacing:                 6;
+}
+
+.view {
+        background-color: @base_color;
+}
+
+.view:selected {
+        background-color: @selected_bg_color
+}
+
+/***********************************************************************
+* Stuff I haven't styled yet                                           *
+***********************************************************************/
 
 /*
     -GtkButton-interior-focus: true;
@@ -63,6 +276,8 @@
     -GtkWidget-focus-line-width: 1;
 */
 
+.grip {
+}
 
 /***************
  * Base States *
@@ -97,51 +312,6 @@ GtkSpinButton.button:prelight,
 GtkSpinButton.button:active {
 }
 
-/*****************
- * Notebooks and *
- * tabs          *
- *****************/
-/* .notebook {
-    background-color:   shade (@bg_color, 1.06);
-    border-radius:                               4;
-}
-
-.notebook tab {
-    background-color:   shade (@bg_color, 0.85);
-}
-
-.notebook tab:active {
-    background-color:   shade (@bg_color, 1.06);
-}*/
-
-.notebook tab .button,
-.notebook tab .button:hover,
-.notebook tab .button:hover:active {
-
-    background-image:   none;
-    background-color:   alpha (#000, 0.02);
-
-    -unico-border-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (shade (@bg_color, 0.67)),
-                     to (shade (@bg_color, 0.74)));
-
-    -unico-inner-stroke-gradient: -gtk-gradient (linear,
-                    left top, left bottom,
-                    from (alpha (#000, 0.10)),
-                    to (alpha (#000, 0.06)));
-
-    -unico-outer-stroke-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (alpha (#fff, 0.00)),
-                     color-stop (0.85, alpha (#fff, 0.00)),
-                     to (alpha (#fff, 0.40)));
-}
-
-.notebook tab .button:hover:active {
-    background-color:   alpha (#000, 0.10);
-}
-
 /**************
  * ComboBoxes *
  **************/
@@ -162,29 +332,6 @@ GtkComboBox.button {
 .check,
 .check row:selected,
 .check row:selected:focused {
-
-    background-image: -gtk-gradient (linear,
-			         left top,
-			         left bottom,
-			         from (shade (@base_color, 0.82)),
-                     color-stop (0.20, shade (@base_color, 0.94)),
-			         to (@base_color));
-
-    -unico-outer-stroke-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (alpha (#fff, 0.00)),
-                     color-stop (0.75, alpha (#fff, 0.00)),
-                     to (alpha (#fff, 0.40)));
-
-    -unico-border-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (shade (@bg_color, 0.65)),
-                     to (shade (@bg_color, 0.72)));
-
-    -unico-inner-stroke-gradient: -gtk-gradient (linear,
-                    left top, left bottom,
-                    from (alpha (#000, 0.10)),
-                    to (alpha (#000, 0.06)));
 
 }
 
@@ -213,31 +360,6 @@ GtkComboBox.button {
 .radio row:selected,
 .radio row:selected:focused {
 
-    border-radius:  10;
-
-    background-image: -gtk-gradient (linear,
-			         left top,
-			         left bottom,
-			         from (shade (@base_color, 0.82)),
-                     color-stop (0.20, shade (@base_color, 0.94)),
-			         to (@base_color));
-
-    -unico-outer-stroke-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (alpha (#fff, 0.00)),
-                     color-stop (0.75, alpha (#fff, 0.00)),
-                     to (alpha (#fff, 0.40)));
-
-    -unico-border-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (shade (@bg_color, 0.65)),
-                     to (shade (@bg_color, 0.72)));
-
-    -unico-inner-stroke-gradient: -gtk-gradient (linear,
-                    left top, left bottom,
-                    from (alpha (#000, 0.10)),
-                    to (alpha (#000, 0.06)));
-
 }
 
 .radio:insensitive,
@@ -265,7 +387,7 @@ GtkComboBox.button {
  *************/
 
 GtkSwitch {
-    padding:    1;
+
     font: bold condensed 10;
 }
 
@@ -279,21 +401,11 @@ GtkSwitch.trough {
 				     from (shade (@base_color, 0.54)),
 				     to (shade (@base_color, 0.76)));
 
-    -unico-outer-stroke-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (alpha (#fff, 0.00)),
-                     color-stop (0.75, alpha (#fff, 0.00)),
-                     to (alpha (#fff, 0.40)));
 
     -unico-border-gradient: -gtk-gradient (linear,
                      left top, left bottom,
                      from (shade (@bg_color, 0.46)),
                      to (shade (@bg_color, 0.58)));
-
-    -unico-inner-stroke-gradient: -gtk-gradient (linear,
-                    left top, left bottom,
-                    from (alpha (#000, 0.12)),
-                    to (alpha (#000, 0.06)));
 
 }
 
@@ -341,8 +453,7 @@ GtkSwitch.trough:insensitive {
 }
 
 GtkSwitch.slider {     
-    -unico-outer-stroke-style:              none;
-    border-width: 1;    
+    -unico-outer-stroke-style:              none;  
 
     background-image: -gtk-gradient (linear,
                     left top,
@@ -393,9 +504,6 @@ GtkIconView.view.cell:selected,
 GtkIconView.view.cell:selected:focused {
 }
 
-.view {
-}
-
 GtkTreeView {
     -GtkTreeView-vertical-separator:            0;
     -GtkTreeView-expander-size:                 8;
@@ -410,7 +518,6 @@ column-header {
 
 column-header .button {
     -unico-outer-stroke-style:                  none;
-    border-radius:                              0;
     border-width:                              0;
     -GtkButton-inner-border:                    2;
 
@@ -425,9 +532,6 @@ column-header .button {
 }
 
 column-header .button:hover {
-    -unico-outer-stroke-style:                  none;
-    border-radius:                              0;
-    border-width:                               0;
     color:                                      @text_color;
 
     background-image: -gtk-gradient (linear,
@@ -500,10 +604,6 @@ GtkCalendar.highlight {
 .dim-label {
 }
 
-.sidebar,
-.sidebar.view {
-}
-
 ApDocView, /* Abiword */
 EogScrollView, /* Eog */
 CheeseThumbView /* Cheese */
@@ -518,44 +618,8 @@ TerminalScreen {
     -TerminalScreen-background-darkness: 0.85;
 }
 
-/**********************
- * Fallback Mode Panel
- **********************/
-
-PanelWidget,
-PanelApplet,
-PanelApplet > GtkMenuBar.menubar,
-.gnome-panel-menu-bar,
-PanelAppletFrame,
-PanelMenuBar.menubar,
-PanelToplevel {
-}
-
-PanelApplet > GtkMenuBar.menubar.menuitem:prelight,
-.gnome-panel-menu-bar.menuitem:prelight {
-}
-
-/* panel buttons (clock, tasklist etc) */
-PanelApplet GtkToggleButton {
-}
-
-PanelApplet GtkToggleButton:prelight:active,
-PanelApplet GtkToggleButton:active {
-}
-
-PanelApplet GtkToggleButton:prelight {
-}
-
-NaTrayApplet {
-    -NaTrayApplet-icon-padding: 12;
-}
-
-WnckPager, WnckTasklist {
-}
-
 @import url("button.css");
 @import url("entry.css");
-@import url("grip.css");
 @import url("menu.css");
 @import url("progressbar.css");
 @import url("sidebar.css");
