--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/button.css
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/button.css
@@ -1,47 +1,28 @@
-/***********
- * Buttons *
- ***********/
+/*********
+* Button *
+*********/
 
-.button,
-.primary-toolbar.toolbar.button {
+.button {
+    -GtkButton-child-displacement-x:             0;
+    -GtkButton-child-displacement-y:             0;
+    -GtkButton-default-border:                 0;
+    -GtkButton-image-spacing:                    0;
+    -GtkButton-inner-border:                    3;
 
     background-image: -gtk-gradient (linear,
-                    left top,
-                    left bottom,
-                    from (shade (@bg_color, 1.15)),
-                    to (shade (@bg_color, 1.03)));
+        left top,
+        left bottom,
+        from (shade (@bg_color, 1.15)),
+        to (shade (@bg_color, 1.03)));
 
     -unico-border-gradient: -gtk-gradient (linear,
-                    left top, left bottom,
-                    from (shade (@bg_color, 0.78)),
-                    to (shade (@bg_color, 0.60)));
-}
-
-.button:hover,
-.primary-toolbar.toolbar.button:hover {
-
-    color:          @text_color;
-    
-
-    background-image: -gtk-gradient (linear,
-                    left top,
-                    left bottom,
-                    from (shade (@bg_color, 1.13)),
-                    to (shade (@bg_color, 1.05)));
-
-
-    -unico-outer-stroke-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (alpha (#fff, 0.00)),
-                     color-stop (0.75, alpha (#fff, 0.00)),
-                     to (alpha (#fff, 0.15)));
-
+        left top, left bottom,
+        from (shade (@bg_color, 0.78)),
+        to (shade (@bg_color, 0.60)));
 }
 
 .button:active,
-.button:hover:active,
-.primary-toolbar.toolbar.button:active,
-.primary-toolbar.toolbar.button:hover:active {
+.button:hover:active {
 
     color:          #fff;
 
@@ -61,8 +42,8 @@
     background-image: -gtk-gradient (linear,
 				     left top,
 				     left bottom,
-                     from (shade (@bg_color, 1.06)),
-                     to (shade (@bg_color, 0.88)));
+                     from (alpha (#fff, 0.20)),
+                     to (alpha (#000, 0.05)));
 
     -unico-border-gradient: -gtk-gradient (linear,
                      left top, left bottom,
@@ -70,40 +51,35 @@
                      to (shade (@bg_color, 0.70)));
 }
 
-.button:active:insensitive,
-.primary-toolbar.toolbar.button:active:insensitive {
+/*************************** 
+* Secondary Toolbar Button *
+***************************/
 
-    background-image: -gtk-gradient (linear,
-			         left top,
-			         left bottom,
-			         from (shade (@bg_color, 0.85)),
-                     color-stop (0.20, shade (@bg_color, 0.94)),
-			         to (@bg_color));
+.secondary-toolbar.toolbar.button {
+        -GtkButton-inner-border:    0;
+        -unico-outer-stroke-style:      none;
+}
 
-    -unico-border-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (shade (@bg_color, 0.67)),
-                     to (shade (@bg_color, 0.74)));
+.secondary-toolbar.toolbar.button:active,
+.secondary-toolbar.toolbar.button:hover:active {
 
-    -unico-outer-stroke-gradient: -gtk-gradient (linear,
-                     left top, left bottom,
-                     from (alpha (#fff, 0.00)),
-                     color-stop (0.75, alpha (#fff, 0.00)),
-                     to (alpha (#fff, 0.40)));
-
-    -unico-inner-stroke-gradient: -gtk-gradient (linear,
+        -unico-inner-stroke-gradient: -gtk-gradient (linear,
                     left top, left bottom,
-                    from (alpha (#000, 0.10)),
-                    to (alpha (#000, 0.06)));
+                    from (alpha (#000, 0.00)),
+                    to (alpha (#000, 0.00)));
 
+        background-image: -gtk-gradient (linear,
+                left top,
+                left bottom,
+                from (alpha (#000, 0.10)),
+                to (alpha (#000, 0.10)));
+
+        -unico-border-gradient: -gtk-gradient (linear,
+                left top, left bottom,
+                from (alpha (#000, 0.30)),
+                color-stop (0.15, alpha (#000, 0.10)),
+                color-stop (0.85, alpha (#000, 0.10)),
+                to (alpha (#fff, 0.50)));
 }
 
-.button.default {
-}
 
-/***************************
- * Primary Toolbar Buttons *
- ***************************/
-.primary-toolbar.toolbar.button {
-    -GtkButton-inner-border:    5;
-}
